# hotels_admin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
hotels/: admin.py  models.py  urls.py  views.py
hotels/migrations/: 0001_initial.py
hotels_admin_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: register.html
templates/admin/: login.html
users/: forms.py  views.py
